# complexity-tokenizer

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tmpclaude-e857-cwd
.github/workflows/: publish.yml
examples/: train_eduweb.py
python/complexity_tokenizer/: __init__.py
src/: bpe.rs  bpe_trainer.rs  decoders.rs  encoding.rs  hub.rs  huggingface.rs  lib.rs  models.rs  normalizers.rs  postprocessors.rs  pretokenizers.rs  trainer.rs  trainers.rs  vocab.rs
src/bindings/: components.rs  encoding.rs  mod.rs  models.rs  tokenizer.rs  trainers.rs
src/huggingface/: chat.rs  config.rs  mod.rs  parsing.rs  serialization.rs
